# RustRush-CLIKit

./: Cargo.toml  README.md  color_config.json  demand.typ  sd  test.py
src/: ls.rs  main.rs
src/merge/: merge.rs
src/rename/: rename.rs
src/search/: search.rs
src/show/: show.rs
src/utils/: utils.rs
test/: a2.txt  a3.c  a3.txt  aa.TXT  test.cpp  test.out
test/test_files/: root_test.bat  root_test.c  root_test.cpp  root_test.cs  root_test.css  root_test.go  root_test.h  root_test.hpp  root_test.html  root_test.java  root_test.js  root_test.json  root_test.kt  root_test.kts  root_test.md  root_test.php  root_test.ps1  root_test.ps1xml  root_test.psd1  root_test.psm1  root_test.py  root_test.rb  root_test.rs  root_test.sh  root_test.swift  root_test.toml  root_test.ts  root_test.txt  root_test.yaml  root_test.yml
