[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.41"
colored = "3.0.0"
syntect = "5.2.0"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
fancy-regex = "0.14.0"
lazy_static = "1.5.0"
atty = "0.2.14" 
users = "0.11.0" 