[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.41"
colored = "3.0.0"
syntect = "5.2.0"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
fancy-regex = "0.14.0"
lazy_static = "1.5.0"
atty = "0.2.14" 
users = "0.11.0" 
anyhow = "1.0.98" 
mime_guess = "2.0.5"
id3 = "1.16.3" 
nom-exif = "2.5.4"
symphonia  = {version = "0.5.4", features = ["all"]}
rand = "0.9.1"
